was added/changed: - more functions from python - more logs - fix bugs - base fronted (need to upgrade) - create_admin.go - admin views - fix warns with handler GetSimilarTracksHandler Prepare for MVP
