# audio_processing/flask_interface/app.py
@@ -15,35 +15,48 @@ def process_track():
 
 @app.route('/install/artist', methods=['post'])
 def install_by_artist():
+    print("Start flask route artist", flush=True)
     data: dict = request.get_json()
     artist_id = data.get("artist_id")
+
     if not artist_id:
-        return jsonify({"error": "request must have atrist_id"}), 400
+        print("No id err", flush=True)
+        return jsonify({"error": "request must have artist_id"}), 400
     try:
+        print("Start loading tracks", flush=True)
         install_preview_by_artist(artist_id)
     except Exception as ex:
-        return jsonify({"error": ex}), 500
-    return 200
+        print(ex, flush=True)
+        return jsonify({"error": str(ex)}), 500
+    print("Success", flush=True)
+    return '', 200
     
 @app.route('/install/album', methods=['post'])
 def install_by_album():
+    print("Start flask route album", flush=True)
     data: dict = request.get_json()
     album_id = data.get("album_id")
     if not album_id:
+        print("No id err", flush=True)
         return jsonify({"error": "request must have album_id"}), 400
     try:
+        print("Start loading tracks", flush=True)
         install_preview_by_album(album_id)
     except Exception as ex:
-        return jsonify({"error": ex}), 500
-    return 200
+        print(ex, flush=True)
+        return jsonify({"error": str(ex)}), 500
+    print("Success", flush=True)
+    return '', 200
 
 @app.route('/signatures/set', methods=['post'])
 def set_signatures():
+    print("Start route /signatures", flush=True)
     try:
         process_tracks_in_batches()
     except Exception as ex:
+        print("Error when proccessing tracks", ex)
         return jsonify({"error": ex}), 500
-    return 200
+    return '', 200
 
 if __name__ == '__main__':
     app.run(host='0.0.0.0', port=5000)
