# go_backend/internal/tasks/python_api.go
@@ -22,13 +22,18 @@ type PythonService struct {
 func NewPythonService() *PythonService {
 	return &PythonService{
 		apiBaseUrl: os.Getenv("PYTHON_APP_URL"),
-		client: &http.Client{Timeout: time.Second * 10},
+		client: &http.Client{Timeout: time.Minute * 2},
 	}
 }
 
 func (s *PythonService) InstallTracksByArtistHandler(ctx context.Context, task *asynq.Task) error {
-	var artistId string
-	if err := json.Unmarshal(task.Payload(), &artistId); err != nil {
+	log.Println("InstallTracksByArtistHandler: received task")
+	var input struct {
+		ArtistId string `json:"artist_id"`
+	}
+
+	if err := json.Unmarshal(task.Payload(), &input); err != nil {
+		log.Println(err.Error())
 		return err
 	}
 
@@ -36,35 +41,45 @@ func (s *PythonService) InstallTracksByArtistHandler(ctx context.Context, task *
 		Id string `json:"artist_id"`
 	}
 
-	requestBody, err := json.Marshal(installTracksRequest{Id: artistId})
+	requestBody, err := json.Marshal(installTracksRequest{Id: input.ArtistId})
 	if err != nil {
+		log.Println(err.Error())
 		return fmt.Errorf("failed to marshal request: %s", err.Error())
 	}
 
 	url := fmt.Sprintf("%s/install/artist", s.apiBaseUrl)
 	req, err := http.NewRequest("POST", url, bytes.NewBuffer(requestBody))
 	if err != nil {
+		log.Println(err.Error())
 		return fmt.Errorf("failed to create request: %s", err.Error())
 	}
 	req.Header.Set("Content-Type", "application/json")
 
 	resp, err := s.client.Do(req)
 	if err != nil {
+		log.Println(err.Error())
 		return fmt.Errorf("failed to send request: %s", err.Error())
 	}
 	defer resp.Body.Close()
-
-	if resp.StatusCode != http.StatusAccepted {
-		return fmt.Errorf("API responded with status: %d", resp.StatusCode)
+	
+	if resp.StatusCode != http.StatusOK {
+		log.Printf("Error: received non-OK status code %d from Python API\n", resp.StatusCode)
+		return fmt.Errorf("API responded with status code %d", resp.StatusCode)
 	}
 
-	log.Println("Successfully installed tracks for album:", artistId)
+	log.Println("Successfully installed tracks for album:", input.ArtistId)
 	return nil
 }
 
+
 func (s *PythonService) InstallTracksByAlbumHandler(ctx context.Context, task *asynq.Task) error {
-	var albumId string
-	if err := json.Unmarshal(task.Payload(), &albumId); err != nil {
+	log.Println("InstallTracksByAlbumHandler: received task")
+	var input struct {
+		AlbumId string `json:"album_id"`
+	}
+
+	if err := json.Unmarshal(task.Payload(), &input); err != nil {
+		log.Println(err.Error())
 		return err
 	}
 
@@ -72,30 +87,50 @@ func (s *PythonService) InstallTracksByAlbumHandler(ctx context.Context, task *a
 		Id string `json:"album_id"`
 	}
 
-	requestBody, err := json.Marshal(installTracksRequest{Id: albumId})
+	requestBody, err := json.Marshal(installTracksRequest{Id: input.AlbumId})
 	if err != nil {
+		log.Println(err.Error())
 		return fmt.Errorf("failed to marshal request: %s", err.Error())
 	}
 
 	url := fmt.Sprintf("%s/install/album", s.apiBaseUrl)
 	req, err := http.NewRequest("POST", url, bytes.NewBuffer(requestBody))
 	if err != nil {
+		log.Println(err.Error())
 		return fmt.Errorf("failed to create request: %s", err.Error())
 	}
 	req.Header.Set("Content-Type", "application/json")
 
 	resp, err := s.client.Do(req)
 	if err != nil {
+		log.Println(err.Error())
 		return fmt.Errorf("failed to send request: %s", err.Error())
 	}
 	defer resp.Body.Close()
-
-	if resp.StatusCode != http.StatusAccepted {
-		return fmt.Errorf("API responded with status: %d", resp.StatusCode)
+	
+	if resp.StatusCode != http.StatusOK {
+		log.Printf("Error: received non-OK status code %d from Python API\n", resp.StatusCode)
+		return fmt.Errorf("API responded with status code %d", resp.StatusCode)
 	}
 
-	log.Println("Successfully installed tracks for album:", albumId)
+	log.Println("Successfully installed tracks for album:", input.AlbumId)
 	return nil
+}
+
+func (s *PythonService) SetSignatures(ctx context.Context, task *asynq.Task) error {
+	resp, err := http.Post(fmt.Sprintf("%s/signatures/set", s.apiBaseUrl), "application/json", bytes.NewBuffer([]byte{}))
+	if err != nil {
+		return err
+	}
+	defer resp.Body.Close()
+
+	if resp.StatusCode != http.StatusOK {
+		log.Printf("error: received non-OK status code %d from Python API\n", resp.StatusCode)
+		return err
+	}
+
+	log.Println("Successfully signatures was set")
+	return nil	
 }
 
 func (s *PythonService) TestRequest(ctx context.Context, task *asynq.Task) error {
